add cmake file lists

--- a/plugins/options/CMakeLists.txt
+++ b/plugins/options/CMakeLists.txt
@@ -16,6 +16,8 @@ set(CMAKE_AUTORCC ON) # if you have any .qrc files
 # Add compiler flags for building executables (-fPIE)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
 
-add_subdirectory(core)
-add_subdirectory(plugins)
-add_subdirectory(desktop-qt)
+add_subdirectory(ast)
+add_subdirectory(cfg)
+add_subdirectory(gcctreertl)
+add_subdirectory(ir)
+add_subdirectory(optimization)
