--- a/plugins/tools/CMakeLists.txt
+++ b/plugins/tools/CMakeLists.txt
@@ -16,6 +16,15 @@ set(CMAKE_AUTORCC ON) # if you have any .qrc files
 # Add compiler flags for building executables (-fPIE)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
 
-add_subdirectory(core)
-add_subdirectory(plugins)
-add_subdirectory(desktop-qt)
+add_subdirectory(clang_format)
+add_subdirectory(clang_query)
+add_subdirectory(clangtidy)
+add_subdirectory(include_what_you_use)
+add_subdirectory(ldd)
+add_subdirectory(llvmmca)
+add_subdirectory(osaca)
+add_subdirectory(pahole)
+add_subdirectory(psv_studio)
+add_subdirectory(readelf)
+add_subdirectory(strings)
+add_subdirectory(x86to6502)
