fix cmake file lists

--- a/desktop-qt/CMakeLists.txt
+++ b/desktop-qt/CMakeLists.txt
@@ -16,6 +16,12 @@ set(CMAKE_AUTORCC ON) # if you have any .qrc files
 # Add compiler flags for building executables (-fPIE)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
 
+set(CMAKE_PREFIX_PATH ${PREFIX_PATH})
+message(STATUS "CMAKE_PREFIX_PATH" ${CMAKE_PREFIX_PATH})
+
+include_directories (${PROJECT_SOURCE_DIR})
+include_directories (${PROJECT_BINARY_DIR})
+
 add_compile_definitions(SCINTILLA_QT=1
         SCI_LEXER=1
         _CRT_SECURE_NO_DEPRECATE=1
@@ -28,8 +34,8 @@ include_directories(../core
         ../3rdparty/scintilla/qt/ScintillaEditBase
         ../3rdparty/scintilla/include
         ../3rdparty/scintilla/src
-        ../3rdparty/scintilla/lexlib
-        ../3rdparty/scintilla/include
+        ../3rdparty/lexilla/lexlib
+        ../3rdparty/lexilla/include
         )
 
 file(GLOB
