--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
-project(CodeInspector)
+project(CodeInspector VERSION 1.0.0 LANGUAGES CXX)
 
 add_subdirectory(core)
 add_subdirectory(plugins)
