--- a/plugins/tools/x86to6502/CMakeLists.txt
+++ b/plugins/tools/x86to6502/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.15)
-project(x86to6502)
+project(x86to6502 VERSION 1.0.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(Qt5 COMPONENTS Widgets Core Gui Network Xml REQUIRED)
 
@@ -15,7 +16,6 @@ set(CMAKE_AUTORCC ON) # if you have any .qrc files
 # Add compiler flags for building executables (-fPIE)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
 
-set(CMAKE_PREFIX_PATH ${PREFIX_PATH})
 message(STATUS "CMAKE_PREFIX_PATH" ${CMAKE_PREFIX_PATH})
 
 include_directories (${PROJECT_SOURCE_DIR})
