--- a/plugins/tools/x86to6502/CMakeLists.txt
+++ b/plugins/tools/x86to6502/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
-project(x86to6502 VERSION 1.0.0 LANGUAGES CXX)
+project(x86to6502 VERSION 1.0.0)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
