--- a/desktop-qt/CMakeLists.txt
+++ b/desktop-qt/CMakeLists.txt
@@ -116,7 +116,8 @@ if (APPLE)
     target_link_libraries(CodeInspector z)
 endif()
 
-target_link_libraries(CodeInspector Qt::Widgets Qt::Gui Qt::Core Qt::Network Qt::Xml core
+target_link_libraries(CodeInspector Qt::Widgets Qt::Network Qt::Xml
+        core
         ast cfg gcctreertl ir optimization
         rextester wandbox
         clang_format clang_query clangtidy include_what_you_use ldd llvmmca osaca pahole psv_studio readelf strings x86to6502)
