--- a/.github/workflows/desktop-qt.yml
+++ b/.github/workflows/desktop-qt.yml
@@ -35,6 +35,7 @@ jobs:
           version: ${{ matrix.qt_ver }}
           target: ${{ matrix.qt_target }}
           arch: ${{ matrix.qt_arch }}
+          modules: "qtcore5compat"
                     
       - uses: msys2/setup-msys2@v2
         with:
@@ -109,6 +110,7 @@ jobs:
           version: ${{ matrix.qt_ver }}
           target: ${{ matrix.qt_target }}
           arch: ${{ matrix.qt_arch }}
+          modules: "qtcore5compat"
                     
       - uses: msys2/setup-msys2@v2
         with:
@@ -288,7 +290,8 @@ jobs:
       - name: Install Qt
         uses: jurplel/install-qt-action@v2
         with:
-          version: ${{ matrix.qt_ver }}      
+          version: ${{ matrix.qt_ver }}
+          modules: "qtcore5compat"
         
       - uses: actions/checkout@v2
         with:
