--- a/.github/workflows/desktop-qt.yml
+++ b/.github/workflows/desktop-qt.yml
@@ -15,16 +15,12 @@ jobs:
       matrix:
         qt_ver: [6.2.4]
         qt_target: [desktop]
-        qt_arch: [win64_msvc2019_64, win32_msvc2019]
+        qt_arch: [win64_msvc2019_64]
         include:
           - qt_arch: win64_msvc2019_64
             msvc_arch: x64
             qt_arch_install: msvc2019_64
             mingw_arch: MINGW64 
-          - qt_arch: win32_msvc2019
-            msvc_arch: x86
-            qt_arch_install: msvc2019
-            mingw_arch: MINGW32
     env:
       targetName: CodeInspector
       
@@ -88,18 +84,13 @@ jobs:
       matrix:
         qt_ver: [6.2.4]
         qt_target: [desktop]
-        qt_arch: [win64_msvc2019_64, win32_msvc2019]
+        qt_arch: [win64_msvc2019_64]
         include:
           - qt_arch: win64_msvc2019_64
             msvc_arch: x64
             qt_arch_install: msvc2019_64
             mingw_arch: MINGW64 
-            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-12.0.0/LLVM-12.0.0-win64.exe
-          - qt_arch: win32_msvc2019
-            msvc_arch: x86
-            qt_arch_install: msvc2019
-            mingw_arch: MINGW32
-            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-12.0.0/LLVM-12.0.0-win32.exe
+            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-14.0.0/LLVM-14.0.0-win64.exe
     env:
       targetName: CodeInspector
       
