--- a/.github/workflows/desktop-qt.yml
+++ b/.github/workflows/desktop-qt.yml
@@ -32,6 +32,7 @@ jobs:
           target: ${{ matrix.qt_target }}
           arch: ${{ matrix.qt_arch }}
           modules: "core5compat"
+          aqtversion: '==2.0.6'
                     
       - uses: msys2/setup-msys2@v2
         with:
@@ -102,6 +103,7 @@ jobs:
           target: ${{ matrix.qt_target }}
           arch: ${{ matrix.qt_arch }}
           modules: "core5compat"
+          aqtversion: '==2.0.6'
                     
       - uses: msys2/setup-msys2@v2
         with:
@@ -283,6 +285,7 @@ jobs:
         with:
           version: ${{ matrix.qt_ver }}
           modules: "core5compat"
+          aqtversion: '==2.0.6'
         
       - uses: actions/checkout@v2
         with:
