--- a/.github/workflows/desktop-qt.yml
+++ b/.github/workflows/desktop-qt.yml
@@ -159,7 +159,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        qt_arch: [mingw64_qt5-gcc, mingw64_qt5-static-gcc, mingw64_qt5-clang, mingw64_qt6-gcc, mingw64_qt6-static-gcc, mingw64_qt6-clang]
+        qt_arch: [mingw64_qt5-gcc, mingw64_qt5-static-gcc, mingw64_qt5-clang, mingw64_qt6-gcc, mingw64_qt6-clang]
         include:
           - qt_arch: mingw64_qt5-gcc
             mingw_arch: MINGW64 
@@ -193,14 +193,6 @@ jobs:
             qt_build: qt6
             qmake: qmake6.exe
             windeployqt: windeployqt.exe
-          - qt_arch: mingw64_qt6-static-gcc
-            mingw_arch: MINGW64 
-            mingw_prefix: mingw-w64-x86_64
-            toolchains: gcc
-            mkspec: win32-g++
-            qt_build: qt6-static
-            qmake: /mingw64/qt6-static/bin/qmake6.exe
-            windeployqt: ls.exe
           - qt_arch: mingw64_qt6-clang
             mingw_arch: MINGW64 
             mingw_prefix: mingw-w64-x86_64
