--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,14 @@
 cmake_minimum_required(VERSION 3.15)
 project(CodeInspector VERSION 1.0.0)
 
+IF(CMAKE_BUILD_TYPE MATCHES Debug)
+    set(BUILD_TYPE Debug)
+    add_compile_definitions(LOGS_ENABLED)
+ELSE(CMAKE_BUILD_TYPE MATCHES Debug)
+    set(BUILD_TYPE Release)
+ENDIF(CMAKE_BUILD_TYPE MATCHES Debug)
+
+add_subdirectory(3rdparty)
 add_subdirectory(core)
 add_subdirectory(plugins)
 add_subdirectory(desktop-qt)
