--- a/plugins/options/gcctreertl/CMakeLists.txt
+++ b/plugins/options/gcctreertl/CMakeLists.txt
@@ -4,46 +4,17 @@ project(gcctreertl VERSION 1.0.0)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt5 COMPONENTS Widgets Network Xml REQUIRED)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Network Xml LinguistTools)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Network Xml LinguistTools)
 
 # Instruct CMake to run moc automatically when needed.
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON) # if you have any .ui files
 set(CMAKE_AUTORCC ON) # if you have any .qrc files
 
-# Add compiler flags for building executables (-fPIE)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
-
 
 include_directories(${PROJECT_SOURCE_DIR})
 include_directories(${PROJECT_BINARY_DIR})
-
-add_compile_definitions(SCINTILLA_QT=1
-        SCI_LEXER=1
-        _CRT_SECURE_NO_DEPRECATE=1
-        SCI_STATIC_LINK=1
-        EXPORT_IMPORT_API=
-        QT_STATICPLUGIN=
-        )
-
-add_definitions(${Qt5Widgets_DEFINITIONS}
-        ${Qt5Network_DEFINITIONS}
-        ${Qt5Xml_DEFINITIONS}
-        )
-
-include_directories(../../include
-        ../../../3rdparty/scintilla/qt/ScintillaEdit
-        ../../../3rdparty/scintilla/qt/ScintillaEditBase
-        ../../../3rdparty/scintilla/include
-        ../../../3rdparty/scintilla/src
-        ../../../3rdparty/lexilla/lexlib
-        ../../../3rdparty/lexilla/include
-        ../../../core
-        ${Qt5Widgets_INCLUDE_DIRS}
-        ${Qt5Network_INCLUDE_DIRS}
-        ${Qt5Xml_INCLUDE_DIRS}
-        )
-
 
 file(GLOB
         headers
@@ -53,20 +24,12 @@ file(GLOB
 file(GLOB
         src
         ./*.cpp
-        ./*.cpp
-        ./*.cpp
         )
 
-set(SOURCES
-        ${src}
-        )
+qt_add_plugin(gcctreertl STATIC CLASS_NAME GCCTreeRTLPlugin)
 
-qt5_wrap_cpp(SOURCES
-        ${headers}
-        )
+target_sources(gcctreertl PRIVATE ${src} ${headers})
 
-add_library(gcctreertl
-        ${SOURCES}
-        )
+target_link_libraries(gcctreertl PRIVATE core plugins scintilla Qt::Widgets)
 
 target_include_directories(gcctreertl PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
