--- a/plugins/tools/clangtidy/CMakeLists.txt
+++ b/plugins/tools/clangtidy/CMakeLists.txt
@@ -17,6 +17,13 @@ set(CMAKE_AUTORCC ON) # if you have any .qrc files
 include_directories(${PROJECT_SOURCE_DIR})
 include_directories(${PROJECT_BINARY_DIR})
 
+add_compile_definitions(SCINTILLA_QT=1
+        SCI_LEXER=1
+        _CRT_SECURE_NO_DEPRECATE=1
+        SCI_STATIC_LINK=1
+        EXPORT_IMPORT_API=
+        )
+
 file(GLOB
         headers
         ./*.h
