add intel build

--- a/.github/workflows/desktop-qt.yml
+++ b/.github/workflows/desktop-qt.yml
@@ -8,6 +8,14 @@ on:
     paths-ignore:
       - 'README.md'
       - 'LICENSE'
+
+env:
+  WINDOWS_BASEKIT_URL: https://registrationcenter-download.intel.com/akdlm/IRC_NAS/18674/w_BaseKit_p_2022.2.0.252_offline.exe
+  WINDOWS_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/IRC_NAS/18680/w_HPCKit_p_2022.2.0.173_offline.exe
+  WINDOWS_CPP_COMPONENTS: intel.oneapi.win.cpp-compiler
+  WINDOWS_DPCPP_COMPONENTS: intel.oneapi.win.dpcpp-compiler
+      
+      
 jobs:
   win32-msvc:
     runs-on: windows-latest
@@ -74,7 +82,8 @@ jobs:
           mkdir build
           cd build
           qmake -r CONFIG+=release CONFIG+=qtquickcompiler ..\${{ env.targetName }}.pro
-          jom -j %NUMBER_OF_PROCESSORS%
+          if exist %CD%\jom\jom.exe jom.exe -j %NUMBER_OF_PROCESSORS%
+          if not exist %CD%\jom\jom.exe nmake
           cd ..
           
   win32-clang-msvc:
@@ -152,7 +161,104 @@ jobs:
           mkdir build
           cd build
           qmake -r -spec win32-clang-msvc CONFIG+=release CONFIG+=qtquickcompiler ..\${{ env.targetName }}.pro
-          jom -j %NUMBER_OF_PROCESSORS%
+          if exist %CD%\jom\jom.exe jom.exe -j %NUMBER_OF_PROCESSORS%
+          if not exist %CD%\jom\jom.exe nmake
+          cd ..
+          
+  win32-intel-msvc:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        qt_ver: [6.3.2]
+        qt_target: [desktop]
+        qt_arch: [win64_msvc2019_64]
+        include:
+          - qt_arch: win64_msvc2019_64
+            msvc_arch: x64
+            qt_arch_install: msvc2019_64
+            mingw_arch: MINGW64 
+            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-14.0.0/LLVM-14.0.0-win64.exe
+    env:
+      targetName: CodeInspector
+      
+    steps:
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v2
+        with:
+          version: ${{ matrix.qt_ver }}
+          target: ${{ matrix.qt_target }}
+          arch: ${{ matrix.qt_arch }}
+          modules: "qt5compat qtimageformats"
+          aqtversion: '==2.1.0'
+                    
+      - name: cache intel install
+        id: cache-install
+        uses: actions/cache@v2
+        with:
+          path: |
+              C:\Program Files (x86)\Intel\oneAPI\setvars-vcvarsall.bat
+              C:\Program Files (x86)\Intel\oneAPI\compiler
+          key: install-${{ env.CACHE_NUMBER }}-${{ env.WINDOWS_HPCKIT_URL }}-${{ env.WINDOWS_CPP_COMPONENTS }}-compiler-${{ hashFiles('**/scripts/cache_exclude_windows.sh') }}
+
+      - name: install intel
+        if: steps.cache-install.outputs.cache-hit != 'true'
+        run: |
+          git clone --depth=1 https://github.com/oneapi-src/oneapi-ci.git oneapi-ci
+          cd oneapi-ci
+          scripts/install_windows.bat ${{ env.WINDOWS_HPCKIT_URL }} ${{ env.WINDOWS_CPP_COMPONENTS }}
+
+      - uses: msys2/setup-msys2@v2
+        with:
+          update: true
+          msystem: ${{ matrix.mingw_arch }}
+          install: zip curl
+          
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
+          submodules: true
+      
+      - name: patch 
+        shell: cmd
+        run: |
+          cd 3rdparty\scintillua
+          git apply ..\scintillua.patch
+          cd ..\..
+          
+      - name: Set up clang for Windows
+        shell: cmd
+        run: |
+          mkdir llvm
+          cd llvm
+          curl.exe -o LLVM.exe -L ${{ matrix.clang_link }}
+          7z.exe x LLVM.exe
+          cd ..
+      
+      - name: Set up jom
+        shell: cmd
+        run: |
+          mkdir jom
+          cd jom
+          curl.exe -o jom.zip -L https://download.qt.io/official_releases/jom/jom_1_1_3.zip
+          7z.exe x jom.zip
+          cd ..
+          
+      - name: build-msvc
+        shell: cmd
+        env:
+          vc_arch: ${{ matrix.msvc_arch }}
+        run: |
+          call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vc_arch%
+          call "C:\Program Files (x86)\Intel\oneAPI\compiler\2022.0.3\env\vars.bat"
+          set PATH="C:\Program Files (x86)\Intel\oneAPI\compiler\2022.0.3\windows\bin-llvm\";%CD%\jom;%PATH%
+          cd 3rdparty\scintilla\qt\ScintillaEdit
+          python WidgetGen.py
+          cd ..\..\..\..
+          mkdir build
+          cd build
+          qmake -r -spec win32-clang-msvc CONFIG+=release CONFIG+=qtquickcompiler ..\${{ env.targetName }}.pro
+          if exist %CD%\jom\jom.exe jom.exe -j %NUMBER_OF_PROCESSORS%
+          if not exist %CD%\jom\jom.exe nmake
           cd ..
           
   win32-mingw:
